# draw-heart-wgpu

./: Cargo.toml  README.md
scripts/: gen_vertices_heart.py
src/: main.rs  vertex.rs
src/assets/: mod.rs  vertices.rs
